<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10pt"
        android:paddingLeft="10pt"
        android:layout_weight="0.5">

        <ImageView android:id="@+id/ic_add_record"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_record"
            android:layout_alignParentLeft="true"
            android:paddingRight="10pt"
            />

        <Button style="@style/largeButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_record"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10pt"
        android:paddingLeft="10pt"
        android:layout_weight="0.5"
        android:paddingTop="10pt">

        <ImageView android:id="@+id/ic_history"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_history"
        android:paddingRight="10pt"/>

        <Button style="@style/largeButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10pt"
        android:paddingLeft="10pt"
        android:layout_weight="0.5"
        android:paddingTop="10pt">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_about"
            android:paddingRight="10pt"/>

        <Button style="@style/largeButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>